@@ -1,3 +1,8 @@
+Thu Jun 14 11:21:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/DCPS/TopicReuse/tpreuse.cpp:
+          Improved this test
+
 Thu Jun 14 11:02:17 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * dds/DCPS/DataReaderImpl.cpp:
